--- a/01-minimal-java-gradle/build.gradle
+++ b/01-minimal-java-gradle/build.gradle
@@ -1,15 +1,20 @@
+//EXAMPLE 01-GRADLE-***
 plugins {
    id 'java-library'
    id 'maven-publish'
 }
 
+//EXAMPLE 01-GRADLE-***
 repositories {
    mavenLocal()
    mavenCentral()
 }
+//EXAMPLE 01-GRADLE-02
 group = 'tk.hildebrandt.gradle'
+//EXAMPLE 01-GRADLE-04
 version = '1-SNAPSHOT'
 
+//EXAMPLE 01-GRADLE-***
 publishing {
    publications {
       maven(MavenPublication) {
@@ -17,31 +22,37 @@ publishing {
       }
    }
 }
+java {
+   //EXAMPLE 01-GRADLE-05
+   toolchain {
+      languageVersion.set(JavaLanguageVersion.of(17))
+   }
+}
 
 //Alternativ
 //compileJava.options.encoding = "UTF-8"
 //compileTestJava.options.encoding = "UTF-8"
+//EXAMPLE 01-GRADLE-06
 tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
 }
 
 //Alternativ
 //javadoc.options.encoding = "UTF-8"
+//EXAMPLE 01-GRADLE-06
 tasks.withType(Javadoc) {
    options.encoding = 'UTF-8'
 }
 
-tasks.withType(Test) {
-   systemProperty "file.encoding", "UTF-8"
-   useJUnitPlatform()
-}
-
-java {
-   toolchain {
-      languageVersion.set(JavaLanguageVersion.of(17))
-   }
-}
-
+//EXAMPLE 01-GRADLE-07
 dependencies {
    testImplementation("org.junit.jupiter:junit-jupiter:5.9.2")
 }
+
+tasks.withType(Test) {
+   //EXAMPLE 01-GRADLE-09
+   systemProperty "file.encoding", "UTF-8"
+   //EXAMPLE 01-GRADLE-***
+   useJUnitPlatform()
+}
+
