--- a/04-exclude-dependency-gradle/app/build.gradle
+++ b/04-exclude-dependency-gradle/app/build.gradle
@@ -6,6 +6,7 @@ dependencies {
    module(":lib")
    implementation('org.springframework.boot:spring-boot-starter-data-rest')
    implementation('org.springframework.boot:spring-boot-starter-data-jpa')
+   // EXAMPLE 04-GRADLE-02 include replacement
 //   implementation('org.springframework.boot:spring-boot-starter-log4j2')
    implementation('com.h2database:h2:2.1.214')
    testImplementation('org.springframework.boot:spring-boot-starter-test')
