--- a/04-exclude-dependency-maven/pom.xml
+++ b/04-exclude-dependency-maven/pom.xml
@@ -50,7 +50,8 @@
             <type>pom</type>
             <scope>import</scope>
          </dependency>
-<!--         <dependency>-->
+         <!--EXAMPLE 04-MAVEN-01 Option 1: create entry for importing dependency-->
+         <!--         <dependency>-->
 <!--            <groupId>org.springframework.boot</groupId>-->
 <!--            <artifactId>spring-boot-starter</artifactId>-->
 <!--            <version>${spring-boot.version}</version>-->
