--- a/03-depenency-management-gradle/build.gradle
+++ b/03-depenency-management-gradle/build.gradle
@@ -30,14 +30,14 @@ subprojects {
 
    dependencies {
       // EXAMPLE 03-GRADLE-01 BOM-Import
-      // implementation(enforcedPlatform("org.springframework.boot:spring-boot-dependencies:${springVersion}"))
+       implementation(enforcedPlatform("org.springframework.boot:spring-boot-dependencies:${springVersion}"))
 
       // EXAMPLE 03-GRADLE-02 constraints
       constraints {
-         implementation("org.springframework.boot:spring-boot-starter-data-rest:${springVersion}")
-         implementation("org.springframework.boot:spring-boot-starter-data-jpa:${springVersion}")
-         testImplementation("org.springframework.boot:spring-boot-starter-test:${springVersion}")
-         implementation 'org.junit.jupiter:junit-jupiter:5.9.1'
+//         implementation("org.springframework.boot:spring-boot-starter-data-rest:${springVersion}")
+//         implementation("org.springframework.boot:spring-boot-starter-data-jpa:${springVersion}")
+//         testImplementation("org.springframework.boot:spring-boot-starter-test:${springVersion}")
+//         implementation 'org.junit.jupiter:junit-jupiter:5.9.1'
       }
    }
 }
