--- a/03-depenency-management-maven/pom.xml
+++ b/03-depenency-management-maven/pom.xml
@@ -47,13 +47,13 @@
             <scope>test</scope>
          </dependency>
          <!--EXAMPLE 03-MAVEN-02-->
-         <!--         <dependency>-->
-         <!--            <groupId>org.springframework.boot</groupId>-->
-         <!--            <artifactId>spring-boot-dependencies</artifactId>-->
-         <!--            <version>${spring-boot.version}</version>-->
-         <!--            <type>pom</type>-->
-         <!--            <scope>import</scope>-->
-         <!--         </dependency>-->
+         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-dependencies</artifactId>
+            <version>${spring-boot.version}</version>
+            <type>pom</type>
+            <scope>import</scope>
+         </dependency>
       </dependencies>
    </dependencyManagement>
 </project>
