--- a/03-depenency-management-gradle/app/build.gradle
+++ b/03-depenency-management-gradle/app/build.gradle
@@ -3,7 +3,7 @@ plugins {
 }
 
 dependencies {
-   module(":lib")
+   implementation project(":lib")
    implementation('org.springframework.boot:spring-boot-starter-data-rest')
    implementation('org.springframework.boot:spring-boot-starter-data-jpa')
    testImplementation('org.springframework.boot:spring-boot-starter-test')
