--- a/04-exclude-dependency-gradle/app/build.gradle
+++ b/04-exclude-dependency-gradle/app/build.gradle
@@ -3,7 +3,7 @@ plugins {
 }
 
 dependencies {
-   module(":lib")
+   implementation project(":lib")
    implementation('org.springframework.boot:spring-boot-starter-data-rest')
    implementation('org.springframework.boot:spring-boot-starter-data-jpa')
    // EXAMPLE 04-GRADLE-02 include replacement
