--- a/05-integration-tests-gradle/app/build.gradle
+++ b/05-integration-tests-gradle/app/build.gradle
@@ -3,7 +3,7 @@ plugins {
 }
 
 dependencies {
-   module(":lib")
+   implementation project(":lib")
    implementation('org.springframework.boot:spring-boot-starter-data-rest')
    implementation('org.springframework.boot:spring-boot-starter-data-jpa')
    implementation('com.h2database:h2:2.1.214')
