--- a/04-exclude-dependency-maven/pom.xml
+++ b/04-exclude-dependency-maven/pom.xml
@@ -1,7 +1,7 @@
 <project>
    <modelVersion>4.0.0</modelVersion>
    <groupId>tk.hildebrandt.maven.example-04</groupId>
-   <artifactId>parent</artifactId>
+   <artifactId>parent-04</artifactId>
    <name>04-exclude-dependency-maven</name>
    <version>1-SNAPSHOT</version>
    <packaging>pom</packaging>
@@ -22,7 +22,7 @@
             <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
-               <version>3.0.0</version>
+               <version>3.1.0</version>
                <configuration>
                   <argLine>@{argLine} -Dfile.encoding=${project.build.sourceEncoding}</argLine>
                </configuration>
@@ -34,7 +34,7 @@
       <dependencies>
          <dependency>
             <groupId>tk.hildebrandt.maven.example-04</groupId>
-            <artifactId>lib</artifactId>
+            <artifactId>lib-04</artifactId>
             <version>1-SNAPSHOT</version>
          </dependency>
          <dependency>
