--- a/00-init-gradle-from-pom/pom.xml
+++ b/00-init-gradle-from-pom/pom.xml
@@ -1,7 +1,7 @@
 <project>
    <modelVersion>4.0.0</modelVersion>
    <groupId>tk.hildebrandt.maven</groupId>
-   <artifactId>01-minimal-java-maven</artifactId>
+   <artifactId>00-minimal-maven-to-gradle</artifactId>
    <version>1-SNAPSHOT</version>
    <properties>
       <maven.compiler.source>17</maven.compiler.source>
@@ -34,7 +34,7 @@
          <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-surefire-plugin</artifactId>
-            <version>3.0.0</version>
+            <version>3.1.0</version>
             <configuration>
                <argLine>@{argLine} -Dfile.encoding=${project.build.sourceEncoding}</argLine>
             </configuration>
