--- a/02-multi-module-maven/app/pom.xml
+++ b/02-multi-module-maven/app/pom.xml
@@ -4,16 +4,16 @@
    <!--EXAMPLE 02-MAVEN-03-->
    <parent>
       <groupId>tk.hildebrandt.maven.example-02</groupId>
-      <artifactId>parent</artifactId>
+      <artifactId>parent-02</artifactId>
       <version>1-SNAPSHOT</version>
    </parent>
-   <artifactId>app</artifactId>
+   <artifactId>app-02</artifactId>
    <build>
       <plugins>
          <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-surefire-plugin</artifactId>
-            <version>3.0.0</version>
+            <version>3.1.0</version>
             <configuration>
                <argLine>@{argLine} -Dfile.encoding=${project.build.sourceEncoding}</argLine>
             </configuration>
@@ -23,7 +23,7 @@
    <dependencies>
       <dependency>
          <groupId>tk.hildebrandt.maven.example-02</groupId>
-         <artifactId>lib</artifactId>
+         <artifactId>lib-02</artifactId>
          <version>${project.version}</version>
       </dependency>
       <dependency>
