--- a/02-multi-module-maven/pom.xml
+++ b/02-multi-module-maven/pom.xml
@@ -1,7 +1,7 @@
 <project>
    <modelVersion>4.0.0</modelVersion>
    <groupId>tk.hildebrandt.maven.example-02</groupId>
-   <artifactId>parent</artifactId>
+   <artifactId>parent-02</artifactId>
    <name>02-multi-module-maven</name>
    <version>1-SNAPSHOT</version>
    <packaging>pom</packaging>
