--- a/05-integration-tests-maven/lib/pom.xml
+++ b/05-integration-tests-maven/lib/pom.xml
@@ -2,10 +2,10 @@
    <modelVersion>4.0.0</modelVersion>
    <parent>
       <groupId>tk.hildebrandt.maven.example-05</groupId>
-      <artifactId>parent</artifactId>
+      <artifactId>parent-05</artifactId>
       <version>1-SNAPSHOT</version>
    </parent>
-   <artifactId>lib</artifactId>
+   <artifactId>lib-05</artifactId>
    <dependencies>
       <dependency>
          <groupId>org.junit.jupiter</groupId>
