--- a/06-dependencies-of-artifacts-maven/pom.xml
+++ b/06-dependencies-of-artifacts-maven/pom.xml
@@ -1,7 +1,7 @@
 <project>
    <modelVersion>4.0.0</modelVersion>
    <groupId>tk.hildebrandt.maven.example-06</groupId>
-   <artifactId>parent</artifactId>
+   <artifactId>parent-06</artifactId>
    <name>06-exclude-dependency-maven</name>
    <version>1-SNAPSHOT</version>
    <packaging>pom</packaging>
@@ -23,7 +23,7 @@
          <plugins>
             <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
-               <version>3.0.0</version>
+               <version>3.1.0</version>
                <configuration>
                   <argLine>@{argLine} -Dfile.encoding=${project.build.sourceEncoding}</argLine>
                </configuration>
@@ -53,7 +53,7 @@
       <dependencies>
          <dependency>
             <groupId>tk.hildebrandt.maven.example-06</groupId>
-            <artifactId>lib</artifactId>
+            <artifactId>lib-06</artifactId>
             <version>1-SNAPSHOT</version>
          </dependency>
          <dependency>
