--- a/04-exclude-dependency-maven/app/pom.xml
+++ b/04-exclude-dependency-maven/app/pom.xml
@@ -54,12 +54,12 @@
          <artifactId>spring-boot-starter-test</artifactId>
          <scope>test</scope>
          <!--EXAMPLE 04-MAVEN-01 Option 2: exclude transient dependency on all importing dependency(mvn version dependent)-->
-         <exclusions>
-            <exclusion>
-               <groupId>org.springframework.boot</groupId>
-               <artifactId>spring-boot-starter-logging</artifactId>
-            </exclusion>
-         </exclusions>
+<!--         <exclusions>-->
+<!--            <exclusion>-->
+<!--               <groupId>org.springframework.boot</groupId>-->
+<!--               <artifactId>spring-boot-starter-logging</artifactId>-->
+<!--            </exclusion>-->
+<!--         </exclusions>-->
       </dependency>
       <!--EXAMPLE 04-MAVEN-02 import replacement-->
       <!--      <dependency>-->
