--- a/03-depenency-management-gradle/build.gradle
+++ b/03-depenency-management-gradle/build.gradle
@@ -1,8 +1,8 @@
-group = 'tk.hildebrandt.gradle'
-version = '1-SNAPSHOT'
+group = "tk.hildebrandt.gradle"
+version = "1-SNAPSHOT"
 
 subprojects {
-   apply plugin: 'java'
+   apply plugin: "java"
 
    repositories {
       mavenLocal()
@@ -10,11 +10,11 @@ subprojects {
    }
 
    tasks.withType(JavaCompile) {
-      options.encoding = 'UTF-8'
+      options.encoding = "UTF-8"
    }
 
    tasks.withType(Javadoc) {
-      options.encoding = 'UTF-8'
+      options.encoding = "UTF-8"
    }
 
    tasks.withType(Test) {
