--- a/03-depenency-management-gradle/lib/build.gradle
+++ b/03-depenency-management-gradle/lib/build.gradle
@@ -1,8 +1,8 @@
 plugins {
-   id 'java-library'
+   id "java-library"
 }
 
 dependencies {
-   implementation('jakarta.persistence:jakarta.persistence-api:3.0.0')
-   testImplementation 'org.junit.jupiter:junit-jupiter'
+   implementation("jakarta.persistence:jakarta.persistence-api:3.0.0")
+   testImplementation "org.junit.jupiter:junit-jupiter"
 }
