--- a/02-multi-module-gradle/app/build.gradle
+++ b/02-multi-module-gradle/app/build.gradle
@@ -1,8 +1,8 @@
 //EXAMPLE 02-GRADLE-02
 plugins {
-   id 'init.gradle.java-application-conventions'
+   id("init.gradle.java-application-conventions")
 }
 
 dependencies {
-   implementation project(":lib")
+   implementation(project(":lib"))
 }
