--- a/02-multi-module-gradle/buildSrc/src/main/groovy/init.gradle.java-common-conventions.gradle
+++ b/02-multi-module-gradle/buildSrc/src/main/groovy/init.gradle.java-common-conventions.gradle
@@ -8,15 +8,15 @@ repositories {
    mavenCentral()
 }
 
-tasks.withType(JavaCompile) {
+tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
 }
 
-tasks.withType(Javadoc) {
+tasks.withType(Javadoc).configureEach {
    options.encoding = 'UTF-8'
 }
 
-tasks.withType(Test) {
+tasks.withType(Test).configureEach {
    systemProperty "file.encoding", "UTF-8"
    useJUnitPlatform()
 }
